
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tedesco"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []
description = "Music theory class library named in honour of Tommy Tedesco"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --strict-config --maxfail=0 --cov=tedesco --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tedesco"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["build", "dist", ".tox", ".venv"]
fix = true

[tool.ruff.lint]
select = [
  "E", "F", "W",          # pycodestyle/pyflakes
  "I",                    # isort
  "B",                    # bugbear
  "UP",                   # pyupgrade
  "PL",                   # pylint (subset)
  "C90"                   # mccabe complexity
]
ignore = [
  "E501",  # let Black handle line length (or keep if using Ruff format)
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # allow magic numbers in tests, etc.

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
/(
  \.git
| \.mypy_cache
| \.ruff_cache
| \.tox
| build
| dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
plugins = []
mypy_path = ["src"]
